bug squashing

--- a/src/app/chapter.css
+++ b/src/app/chapter.css
@@ -186,7 +186,7 @@ li {
     }
 
     th {
-        top: 75px;
+        top: 0px;
     }
 
     .table-overflow tr th {
